=> Implemented the ability to list the environment in the REPL => Implemented a REPL command for displaying the EVM account information for an eos account name => Implemented the unsigned transaction command	in the REPL => Implemented the getCode REPL command => Continued documenting the solution

--- a/clients/evm_repl/public/index.html
+++ b/clients/evm_repl/public/index.html
@@ -37,8 +37,15 @@
       background-color: #1b1b1b;
     }
 
-    .terminal {
-      overflow-x: hidden;
+    .terminalContainer, .terminalInput {
+      padding-bottom: 0 !important;
+    }
+
+    .terminalContainer {
+      padding: 0 !important;
+      margin: 12px;
+      margin-left: 22px;
+      overflow-x: hidden !important;
     }
   </style>
 </head>
